--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<meta charset="utf-8">
+<title>https://jofralso.github.io/markdown-cv/</title>
+<meta http-equiv="refresh" content="0; URL=https://jofralso.github.io/markdown-cv/">
+<link rel="canonical" href="https://jofralso.github.io/markdown-cv/">
