Create base website-terminal

--- a/index.html
+++ b/index.html
@@ -1,5 +1,43 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>https://jofralso.github.io/markdown-cv/</title>
-<meta http-equiv="refresh" content="0; URL=https://jofralso.github.io/markdown-cv/">
-<link rel="canonical" href="https://jofralso.github.io/markdown-cv/">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.cdnfonts.com/css/bausf" rel="stylesheet">
+    <script src="script.js"></script>
+
+    <title>.::Jofralso::.</title>
+</head>
+<body>
+
+    <!-- Header Section -->
+    <header>
+        <h1>Francisco Soares</h1>
+        <h3>@JOFRALSO</h3>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Me</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <!-- Add more template subjects as needed -->
+            </ul>
+        </nav>
+
+    </header>
+
+    <!-- CLI Section -->
+    <section id="cli">
+        <div id="cli-output"></div>
+        <input type="text" id="cli-input" placeholder="Type a command...">
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2023 Francisco Soares. All rights reserved.</p>
+    </footer>
+
+    <!-- Add any additional content or sections as needed -->
+
+</body>
+</html>
