--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header Section -->
     <header>
         <h1>Francisco Soares</h1>
-        <h3>@JOFRALSO</h3>
+        <h4>@jofralso</h4>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
